--- a/miniSys0.3.csproj
+++ b/miniSys0.3.csproj
@@ -60,6 +60,18 @@
     <Compile Include="CommonlyControls.Designer.cs">
       <DependentUpon>CommonlyControls.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\UC_A_Navmenu.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\UC_A_Navmenu.Designer.cs">
+      <DependentUpon>UC_A_Navmenu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\UC_C_Navmenu.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\UC_C_Navmenu.Designer.cs">
+      <DependentUpon>UC_C_Navmenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\UC_forgotPws.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -72,11 +84,24 @@
     <Compile Include="Controls\UC_Login.Designer.cs">
       <DependentUpon>UC_Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\UC_R_Navmenu.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\UC_R_Navmenu.Designer.cs">
+      <DependentUpon>UC_R_Navmenu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\UC_T_Navmenu.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\UC_T_Navmenu.Designer.cs">
+      <DependentUpon>UC_T_Navmenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="CsharpRepairerIncDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>CsharpRepairerIncDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="IconFont.cs" />
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,11 +119,23 @@
     <EmbeddedResource Include="CommonlyControls.resx">
       <DependentUpon>CommonlyControls.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\UC_A_Navmenu.resx">
+      <DependentUpon>UC_A_Navmenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\UC_C_Navmenu.resx">
+      <DependentUpon>UC_C_Navmenu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\UC_forgotPws.resx">
       <DependentUpon>UC_forgotPws.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\UC_Login.resx">
       <DependentUpon>UC_Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\UC_R_Navmenu.resx">
+      <DependentUpon>UC_R_Navmenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\UC_T_Navmenu.resx">
+      <DependentUpon>UC_T_Navmenu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -126,6 +163,9 @@
     </None>
     <None Include="CsharpRepairerIncDataSet.xss">
       <DependentUpon>CsharpRepairerIncDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="icomoon.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -171,5 +211,6 @@
   <ItemGroup>
     <None Include="Resources\tou_alpha.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
