--- a/miniSys0.3.csproj
+++ b/miniSys0.3.csproj
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="packages\CefSharp.Common.100.0.230\build\CefSharp.Common.props" Condition="Exists('packages\CefSharp.Common.100.0.230\build\CefSharp.Common.props')" />
+  <Import Project="packages\cef.redist.x86.100.0.23\build\cef.redist.x86.props" Condition="Exists('packages\cef.redist.x86.100.0.23\build\cef.redist.x86.props')" />
+  <Import Project="packages\cef.redist.x64.100.0.23\build\cef.redist.x64.props" Condition="Exists('packages\cef.redist.x64.100.0.23\build\cef.redist.x64.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -12,6 +15,8 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,6 +38,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CefSharp, Version=100.0.230.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=MSIL">
+      <HintPath>packages\CefSharp.Common.100.0.230\lib\net452\CefSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="CefSharp.Core, Version=100.0.230.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=MSIL">
+      <HintPath>packages\CefSharp.Common.100.0.230\lib\net452\CefSharp.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="CefSharp.WinForms, Version=100.0.230.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=MSIL">
+      <HintPath>packages\CefSharp.WinForms.100.0.230\lib\net462\CefSharp.WinForms.dll</HintPath>
+    </Reference>
     <Reference Include="SunnyUI, Version=3.1.5.0, Culture=neutral, PublicKeyToken=27d7d2e821d97aeb, processorArchitecture=MSIL">
       <HintPath>packages\SunnyUI.3.1.5\lib\net472\SunnyUI.dll</HintPath>
     </Reference>
@@ -84,6 +98,12 @@
     <Compile Include="Controls\UC_Login.Designer.cs">
       <DependentUpon>UC_Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\UC_main.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\UC_main.Designer.cs">
+      <DependentUpon>UC_main.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\UC_R_Navmenu.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -130,6 +150,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\UC_Login.resx">
       <DependentUpon>UC_Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\UC_main.resx">
+      <DependentUpon>UC_main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\UC_R_Navmenu.resx">
       <DependentUpon>UC_R_Navmenu.cs</DependentUpon>
@@ -211,6 +234,19 @@
   <ItemGroup>
     <None Include="Resources\tou_alpha.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Html\chart.js" />
+    <Content Include="Html\index.html" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>这台计算机上缺少此项目引用的 NuGet 程序包。使用“NuGet 程序包还原”可下载这些程序包。有关更多信息，请参见 http://go.microsoft.com/fwlink/?LinkID=322105。缺少的文件是 {0}。</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('packages\cef.redist.x64.100.0.23\build\cef.redist.x64.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\cef.redist.x64.100.0.23\build\cef.redist.x64.props'))" />
+    <Error Condition="!Exists('packages\cef.redist.x86.100.0.23\build\cef.redist.x86.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\cef.redist.x86.100.0.23\build\cef.redist.x86.props'))" />
+    <Error Condition="!Exists('packages\CefSharp.Common.100.0.230\build\CefSharp.Common.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\CefSharp.Common.100.0.230\build\CefSharp.Common.props'))" />
+    <Error Condition="!Exists('packages\CefSharp.Common.100.0.230\build\CefSharp.Common.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\CefSharp.Common.100.0.230\build\CefSharp.Common.targets'))" />
+  </Target>
+  <Import Project="packages\CefSharp.Common.100.0.230\build\CefSharp.Common.targets" Condition="Exists('packages\CefSharp.Common.100.0.230\build\CefSharp.Common.targets')" />
 </Project>
