--- a/miniSys0.3.csproj
+++ b/miniSys0.3.csproj
@@ -158,6 +158,12 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="ProfileFloating.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProfileFloating.Designer.cs">
+      <DependentUpon>ProfileFloating.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="CommonlyControls.resx">
@@ -201,6 +207,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProfileFloating.resx">
+      <DependentUpon>ProfileFloating.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
