--- a/miniSys0.3.csproj
+++ b/miniSys0.3.csproj
@@ -145,6 +145,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CsharpRepairerIncDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="IconFont.cs" />
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
@@ -207,6 +213,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\UC_T_Shortcut.resx">
       <DependentUpon>UC_T_Shortcut.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
