--- a/miniSys0.3.csproj
+++ b/miniSys0.3.csproj
@@ -80,23 +80,11 @@
     <Compile Include="Controls\UC_A_Navmenu.Designer.cs">
       <DependentUpon>UC_A_Navmenu.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controls\UC_A_Shortcut.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\UC_A_Shortcut.Designer.cs">
-      <DependentUpon>UC_A_Shortcut.cs</DependentUpon>
-    </Compile>
     <Compile Include="Controls\UC_C_Navmenu.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Controls\UC_C_Navmenu.Designer.cs">
       <DependentUpon>UC_C_Navmenu.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\UC_C_Shortcut.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\UC_C_Shortcut.Designer.cs">
-      <DependentUpon>UC_C_Shortcut.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\UC_forgotPws.cs">
       <SubType>UserControl</SubType>
@@ -122,23 +110,11 @@
     <Compile Include="Controls\UC_R_Navmenu.Designer.cs">
       <DependentUpon>UC_R_Navmenu.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controls\UC_R_Shortcut.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\UC_R_Shortcut.Designer.cs">
-      <DependentUpon>UC_R_Shortcut.cs</DependentUpon>
-    </Compile>
     <Compile Include="Controls\UC_T_Navmenu.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Controls\UC_T_Navmenu.Designer.cs">
       <DependentUpon>UC_T_Navmenu.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\UC_T_Shortcut.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\UC_T_Shortcut.Designer.cs">
-      <DependentUpon>UC_T_Shortcut.cs</DependentUpon>
     </Compile>
     <Compile Include="CsharpRepairerIncDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -164,11 +140,11 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
-    <Compile Include="ProfileFloating.cs">
+    <Compile Include="FormFloating.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ProfileFloating.Designer.cs">
-      <DependentUpon>ProfileFloating.cs</DependentUpon>
+    <Compile Include="FormFloating.Designer.cs">
+      <DependentUpon>FormFloating.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -190,14 +166,8 @@
     <EmbeddedResource Include="Controls\UC_A_Navmenu.resx">
       <DependentUpon>UC_A_Navmenu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Controls\UC_A_Shortcut.resx">
-      <DependentUpon>UC_A_Shortcut.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Controls\UC_C_Navmenu.resx">
       <DependentUpon>UC_C_Navmenu.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Controls\UC_C_Shortcut.resx">
-      <DependentUpon>UC_C_Shortcut.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\UC_forgotPws.resx">
       <DependentUpon>UC_forgotPws.cs</DependentUpon>
@@ -211,14 +181,8 @@
     <EmbeddedResource Include="Controls\UC_R_Navmenu.resx">
       <DependentUpon>UC_R_Navmenu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Controls\UC_R_Shortcut.resx">
-      <DependentUpon>UC_R_Shortcut.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Controls\UC_T_Navmenu.resx">
       <DependentUpon>UC_T_Navmenu.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Controls\UC_T_Shortcut.resx">
-      <DependentUpon>UC_T_Shortcut.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -229,8 +193,8 @@
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ProfileFloating.resx">
-      <DependentUpon>ProfileFloating.cs</DependentUpon>
+    <EmbeddedResource Include="FormFloating.resx">
+      <DependentUpon>FormFloating.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -518,6 +482,7 @@
     <None Include="Resources\logo.ico" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Controls\Navmenu\" />
     <Folder Include="Html\Document\" />
   </ItemGroup>
   <ItemGroup>
