userSetting infobar done

--- a/miniSys0.3.csproj
+++ b/miniSys0.3.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Reader.Designer.cs">
       <DependentUpon>Reader.cs</DependentUpon>
     </Compile>
+    <Compile Include="StateContainer.cs" />
     <Compile Include="VideoPlayer.cs">
       <SubType>Form</SubType>
     </Compile>
