--- a/miniSys0.3.csproj
+++ b/miniSys0.3.csproj
@@ -259,6 +259,9 @@
     <EmbeddedResource Include="Controls\Others\UC_BasicInfo.resx">
       <DependentUpon>UC_BasicInfo.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Others\UC_Registe_detaildinfo.resx">
+      <DependentUpon>UC_Registe_detaildinfo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\Others\UC_Registe_Staff_Basicinfo.resx">
       <DependentUpon>UC_Registe_Staff_Basicinfo.cs</DependentUpon>
     </EmbeddedResource>
