--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,7 @@
   <package id="cef.redist.x86" version="100.0.23" targetFramework="net472" />
   <package id="CefSharp.Common" version="100.0.230" targetFramework="net472" />
   <package id="CefSharp.WinForms" version="100.0.230" targetFramework="net472" />
+  <package id="QRCoder" version="1.4.3" targetFramework="net472" />
   <package id="SunnyUI" version="3.1.5" targetFramework="net472" />
   <package id="SunnyUI.Common" version="3.1.2" targetFramework="net472" />
 </packages>
