card pagination done

--- a/miniSys0.3.csproj
+++ b/miniSys0.3.csproj
@@ -75,6 +75,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddDescription.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddDescription.Designer.cs">
+      <DependentUpon>AddDescription.cs</DependentUpon>
+    </Compile>
     <Compile Include="add_UC_UserInfo.cs" />
     <Compile Include="CommonlyControls.cs">
       <SubType>Form</SubType>
@@ -94,6 +100,12 @@
     </Compile>
     <Compile Include="Controls\MainArea\UC_Registration .Designer.cs">
       <DependentUpon>UC_Registration .cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\MainArea\UC_TaskCards.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\MainArea\UC_TaskCards.Designer.cs">
+      <DependentUpon>UC_TaskCards.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\MainArea\UC_TaskList.cs">
       <SubType>UserControl</SubType>
@@ -297,6 +309,9 @@
     <Compile Include="ViewProfile.Designer.cs">
       <DependentUpon>ViewProfile.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AddDescription.resx">
+      <DependentUpon>AddDescription.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CommonlyControls.resx">
       <DependentUpon>CommonlyControls.cs</DependentUpon>
     </EmbeddedResource>
@@ -305,6 +320,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\MainArea\UC_Registration .resx">
       <DependentUpon>UC_Registration .cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\MainArea\UC_TaskCards.resx">
+      <DependentUpon>UC_TaskCards.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\MainArea\UC_TaskList.resx">
       <DependentUpon>UC_TaskList.cs</DependentUpon>
