--- a/miniSys0.3.csproj
+++ b/miniSys0.3.csproj
@@ -95,6 +95,12 @@
     <Compile Include="Controls\MainArea\UC_Cus_OrderDetails.Designer.cs">
       <DependentUpon>UC_Cus_OrderDetails.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\MainArea\UC_IncomeAnalysis.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\MainArea\UC_IncomeAnalysis.Designer.cs">
+      <DependentUpon>UC_IncomeAnalysis.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\MainArea\UC_Payment.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -106,6 +112,12 @@
     </Compile>
     <Compile Include="Controls\MainArea\UC_Registration .Designer.cs">
       <DependentUpon>UC_Registration .cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\MainArea\UC_ServiceReport.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\MainArea\UC_ServiceReport.Designer.cs">
+      <DependentUpon>UC_ServiceReport.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\MainArea\UC_TaskCards.cs">
       <SubType>UserControl</SubType>
@@ -330,11 +342,17 @@
     <EmbeddedResource Include="Controls\MainArea\UC_Cus_OrderDetails.resx">
       <DependentUpon>UC_Cus_OrderDetails.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\MainArea\UC_IncomeAnalysis.resx">
+      <DependentUpon>UC_IncomeAnalysis.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\MainArea\UC_Payment.resx">
       <DependentUpon>UC_Payment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\MainArea\UC_Registration .resx">
       <DependentUpon>UC_Registration .cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\MainArea\UC_ServiceReport.resx">
+      <DependentUpon>UC_ServiceReport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\MainArea\UC_TaskCards.resx">
       <DependentUpon>UC_TaskCards.cs</DependentUpon>
